<resources>
    <string name="app_name">FoodMeMiaClient</string>
    <string name="introImgDescription">Intro Bg Image</string>
    <string name="introImage">Intro image</string>
    <string name="introButtonText">Get Started</string>
    <string name="scrollViewLayout">scrollViewLayout</string>
    <string name="menuBanner">menu banner image</string>
    <string name="menuAvatar">menu avatar pfp</string>
    <string name="cartName">My Cart</string>
    <string name="itemsTotalHeader">Items Total</string>
    <string name="deliveryServicesHeader">Delivery Services</string>
    <string name="taxHeader">Tax</string>
    <string name="cartFinalTotalHeader">Total</string>
    <string name="zeroDollar">0$</string>
    <string name="checkoutBtnText">CheckOut</string>
    <string name="cartItemTitle">Title</string>
    <string name="detailTotalPriceHeader">Price</string>
    <string name="addToCartBtnText">Add To Cart</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="foodItemDescriptionContentDescription">food description</string>
    <integer name="card_flip_time_full">700</integer>
    <integer name="card_flip_time_half">300</integer>
</resources>