<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingTop="16dp">

    <ScrollView
        android:id="@+id/myCartScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cartName"
                android:textColor="@color/mainOrange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myCartRecylerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutReceipt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/cart_background">

                <!--                <LinearLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_marginStart="16dp"-->
                <!--                    android:layout_marginTop="16dp"-->
                <!--                    android:layout_marginEnd="16dp"-->
                <!--                    android:layout_marginBottom="16dp"-->
                <!--                    android:orientation="horizontal">-->

                <!--                </LinearLayout>-->

                <!--                <LinearLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_marginStart="16dp"-->
                <!--                    android:layout_marginTop="16dp"-->
                <!--                    android:layout_marginEnd="16dp"-->
                <!--                    android:layout_marginBottom="16dp"-->
                <!--                    android:orientation="horizontal">-->

                <TextView
                    android:id="@+id/itemsTotalHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/itemsTotalHeader"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:textStyle="bold" />

                <!--                </LinearLayout>-->

                <!--                <LinearLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_marginStart="16dp"-->
                <!--                    android:layout_marginTop="16dp"-->
                <!--                    android:layout_marginEnd="16dp"-->
                <!--                    android:layout_marginBottom="16dp"-->
                <!--                    android:orientation="horizontal">-->

                <TextView
                    android:id="@+id/itemsTotalAmount"
                    android:layout_width="68dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="288dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/zeroDollar"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:textStyle="bold" />

                <TextView
                    android:id="@+id/deliveryServicesHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="44dp"
                    android:text="@string/deliveryServicesHeader"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/itemsTotalHeader"
                    tools:textStyle="bold" />

                <!--                </LinearLayout>-->

                <TextView
                    android:id="@+id/taxAmountHeader"
                    android:layout_width="113dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="52dp"
                    android:text="@string/taxHeader"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deliveryServicesHeader"
                    tools:textStyle="bold" />

                <TextView
                    android:id="@+id/taxAmount"
                    android:layout_width="71dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="288dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/zeroDollar"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deliveryServicesAmount"
                    tools:textStyle="bold" />

                <TextView
                    android:id="@+id/deliveryServicesAmount"
                    android:layout_width="72dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="288dp"
                    android:layout_marginTop="44dp"
                    android:text="@string/zeroDollar"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/itemsTotalAmount"
                    tools:textStyle="bold" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="392dp"
                    android:layout_marginBottom="16dp"
                    android:background="#000000"
                    app:layout_constraintBottom_toTopOf="@+id/cartTotal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cartTotalHeader"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/cartTotalHeader"
                    android:layout_width="147dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/cartFinalTotalHeader"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/taxAmountHeader"
                    tools:textStyle="bold" />

                <TextView
                    android:id="@+id/cartTotal"
                    android:layout_width="178dp"
                    android:layout_height="61dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/zeroDollar"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    app:layout_constraintStart_toEndOf="@+id/cartTotalHeader"
                    app:layout_constraintTop_toBottomOf="@+id/taxAmount"
                    tools:textStyle="bold" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cart_btn_background_orange">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="392dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/checkoutBtnText"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.333"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/emptyCartMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YourCartIsEmpty"
        android:textColor="#FF9800"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myCartScrollView" />

    <!--bottom navigation menu-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#f6f6f6"
            app:fabCradleMargin="16dp"
            app:fabCradleRoundedCornerRadius="0dp"
            app:fabCradleVerticalOffset="24dp"
            app:layout_anchor="@+id/app_bar"
            app:layout_anchorGravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/homeBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeBtnNav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bottom_btn1" />

                    <TextView
                        android:id="@+id/homeBtnNavText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profileBtnNav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/bottom_btn2" />

                    <TextView
                        android:id="@+id/profileBtnNavText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/cartBtnNav"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bottom_btn5" />

                    <TextView
                        android:id="@+id/carBtnNavText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cart"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/supportBtnNav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bottom_btn3" />

                    <TextView
                        android:id="@+id/supportBtnNavText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Support"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/settingsBtnNav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bottom_btn4" />

                    <TextView
                        android:id="@+id/settingsBtnNavText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Settings"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>